# splat

./: .gitignore  CMakeLists.txt  README.md  attribute_vs_glsl.cpp  build.cmd  build.sh  buildPs.cmd  cMeshModel.h  cMeshRender.cpp  cMeshRender.h  cModel.cpp  cModel.h  cRender.cpp  cRender.h  cSimpleRender.cpp  cSimpleRender.h  cSplatRender.cpp  cSplatRender.h  cSurfelModel.cpp  cSurfelModel.h  config.hpp  embed.cpp  example.cpp  finalization_fs_glsl.cpp  framebuffer.cpp  framebuffer.h  lighting_glsl.cpp  main.cpp  models.cpp  models.h  objLoader.h  program_attribute.cpp  program_attribute.h  program_attribute.hpp  program_finalization.cpp  program_finalization.h  program_finalization.hpp  simple.cpp  sphere_fs_glsl.cpp  sphere_vs_glsl.cpp  (+8 more)
SDL2/: SDL2main.lib
app/: CMakeLists.txt  baseClasses.cpp  baseClasses.h  buffer.cpp  buffer.h  cApp.cpp  cApp.h  cCamera.cpp  cCamera.h  shader.cpp  shader.h  shaders.cpp  trackball.h
common/: CMakeLists.txt  cLog.cpp  cLog.h
fmt/include/fmt/: core.h
glviz/: CMakeLists.txt  buffer.cpp  buffer.h  buffer.hpp  cCamera.cpp  cCamera.h  camera.cpp  camera.h  glviz.cpp  glviz.h  glviz.hpp  program.cpp  program.h  program.hpp  shader.cpp  shader.h  shader.hpp  trackball.cpp  trackball.h  utility.cpp  utility.h  utility.hpp
glviz/imgui/: CMakeLists.txt
glviz/shaders/: mesh3_fs.glsl  mesh3_fs_glsl.cpp  mesh3_gs.glsl  mesh3_vs.glsl  mesh3_vs_glsl.cpp  sphere_fs.glsl  sphere_vs.glsl
glviz/src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  glviz.cpp  glviz.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  trackball.cpp  trackball.hpp  utility.cpp  utility.hpp
imgui/: CMakeLists.txt
imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h
imgui190/: CMakeLists.txt
models/: crown.mtl
objviewer/: obj-viewer.cpp
shaders/: attribute_fs.glsl  attribute_fs_glsl.cpp  attribute_vs.glsl  finalization_fs.glsl  finalization_vs.glsl  finalization_vs_glsl.cpp  lighting.glsl  mesh3_gs_glsl.cpp
src/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  framebuffer.hpp  main.cpp  program_attribute.cpp  program_attribute.h  program_attribute.hpp  program_finalization.cpp  program_finalization.h  program_finalization.hpp  splat_renderer.cpp  splat_renderer.h  splat_renderer.hpp
stb/folded/: stb_image-2.14.h  stb_truetype.-1.14.h
tools/: embed.cpp
